--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,20 +14,6 @@ p {
   font-size: 2vh;
 }
 
-.footer{
-  background-color: #1A1837;
-  text-align: right;
-  color: white;
-  position: fixed;
-  width: 100%;
-  bottom: 0px;
-  z-index: 100;
-}
-
-.footer p{
-  font-size: 100%;
-}
-
 .main{
   width:98%;
   min-height:85.5vh;
@@ -40,6 +26,7 @@ p {
   color: rgb(51, 51, 51);
   min-height:97vh;
   font-family:'Roboto', sans-serif;
+  overflow: hidden;
 }
 
 .body{
@@ -73,18 +60,6 @@ h1{
   margin-block-start: 0em;
   margin-block-end: 0em;
   font-size:3em;
-}
-
-.footer h1{
-  background: -webkit-linear-gradient(#fa8a2f, #d6571c);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  text-align: right;
-  margin-right: 20px;
-  margin-block-start: 0em;
-  margin-block-end: 0em;
-  font-size: 1em;
-  margin-bottom:0.1%;
 }
 
 .button-container-2 p{
@@ -182,20 +157,6 @@ $col) {
   -webkit-mask-position: 0 0;
   mask-position: 0 0;
  }
-}
-
-.cguPage .buttonBack{
-  background-color: white;
-  width: 100px;
-  padding: 10px;
-  border-radius: 20px;
-  border: 1px solid #1A1837;
-  margin-top: 10px;
-  margin-left: 10px;
-}
-
-.buttonBack:hover .Icon span{
-  background:#FA8A2F;
 }
 
 .Icon {
