Images en local

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -34,7 +34,7 @@ p {
 }
 
 .cover {
-  background-image: url(https://zupimages.net/up/19/23/xcsm.jpg);
+  background-image: url("/assets/img/cover.jpg");
   background-size:cover;
   background-repeat: no-repeat;
   background-position: center center; 
