--- a/src/app/home-pannel-page/convs-pannel/one-conv-stats/messages-stat/messages-stat.component.html
+++ b/src/app/home-pannel-page/convs-pannel/one-conv-stats/messages-stat/messages-stat.component.html
@@ -4,7 +4,7 @@
 
       <div class="sideText">
         <h2>Répartition des messages par participants</h2>
-        <img class = "imgHelp" style="margin-top:0.6%;" (click)="help('NbrMessagePerUser')" src="https://image.flaticon.com/icons/svg/254/254059.svg"/>
+        <img class = "imgHelp" style="margin-top:0.6%;" (click)="help('NbrMessagePerUser')" src="/assets/img/lofo_info.svg"/>
       </div>
       <div class="sideImg">
         <div class="helpText" id="helpNbrMessagePerUser">
@@ -30,7 +30,7 @@
     <div class="oneCard cardbotleft">
       <div class="sideText">
         <h2>Moyenne de caractères par message</h2>
-        <img class = "imgHelp" style="margin-top:0.6%;" (click)="help('CaracterPerMessage')" src="https://image.flaticon.com/icons/svg/254/254059.svg"/>
+        <img class = "imgHelp" style="margin-top:0.6%;" (click)="help('CaracterPerMessage')" src="/assets/img/lofo_info.svg"/>
       </div>
       <div class="sideImg">
         <div class="helpText" id="helpCaracterPerMessage">
