--- a/src/app/home-pannel-page/convs-pannel/one-conv-stats/time-stat/time-stat.component.html
+++ b/src/app/home-pannel-page/convs-pannel/one-conv-stats/time-stat/time-stat.component.html
@@ -3,7 +3,7 @@
     <div class="oneCard cardmain">
       <div class="sideText">
         <h2>Répartition des messages par tranche horaire</h2>
-        <img class = "imgHelp" style="margin-top:0.5%" (click)="help('NbrMessagePerTime')" src="https://image.flaticon.com/icons/svg/254/254059.svg"/>
+        <img class = "imgHelp" style="margin-top:0.5%" (click)="help('NbrMessagePerTime')" src="/assets/img/logo_info.svg"/>
       </div>
       <div class="sideImg">
         <div class="helpText" id="helpNbrMessagePerTime">
@@ -21,7 +21,7 @@
     <div class="oneCard cardleft">
       <div class="sideText">
         <h2>Somme des messages en fonction du temps</h2>
-        <img class = "imgHelp" style="margin-top:0.7%" (click)="help('SumMessage')" src="https://image.flaticon.com/icons/svg/254/254059.svg"/>
+        <img class = "imgHelp" style="margin-top:0.7%" (click)="help('SumMessage')" src="/assets/img/logo_info.svg"/>
       </div>
       <div class="sideImg">
         <div class="helpText" id="helpSumMessage">
@@ -45,7 +45,7 @@
     <div class="oneCard cardright">
       <div class="sideText">
         <h2>Temps de réponse moyen</h2>
-        <img style="margin-top:0.7%" class = "imgHelp" (click)="help('AverageTimeToAnswer')" src="https://image.flaticon.com/icons/svg/254/254059.svg"/>
+        <img style="margin-top:0.7%" class = "imgHelp" (click)="help('AverageTimeToAnswer')" src="/assets/img/logo_info.svg"/>
       </div>
       <div class="sideImg">
         <div class="helpText" id="helpAverageTimeToAnswer">
