--- a/src/app/home-pannel-page/profil-pannel/profil-pannel.component.html
+++ b/src/app/home-pannel-page/profil-pannel/profil-pannel.component.html
@@ -12,85 +12,85 @@
 </div>
 
 <div class="mainProfil" *ngIf="profilUser==='INTP'">
-  <img src="https://storage.googleapis.com/neris/public/images/types/avatars/intp-logician.svg">
+  <img src="/assets/img/profil/logo_intp.svg">
   <h2 style="margin-top:1%">Le chercheur</h2>
 </div>
 
 <div class="mainProfil" *ngIf="profilUser==='INTJ'">
-  <img src="https://storage.googleapis.com/neris/public/images/types/avatars/intj-architect.svg">
+  <img src="/assets/img/profil/logo_intj.svg">
   <h2 style="margin-top:1%">Le stratège</h2>
 </div>
 
 <div class="mainProfil" *ngIf="profilUser==='ENTJ'">
-  <img src="https://storage.googleapis.com/neris/public/images/types/avatars/entj-commander.svg">
+  <img src="/assets/img/profil/logo_entj.svg">
   <h2 style="margin-top:1%">Le commandant</h2>
 
 </div>
 
 <div class="mainProfil" *ngIf="profilUser==='ENTP'">
-  <img src="https://storage.googleapis.com/neris/public/images/types/avatars/entp-debater.svg">
+  <img src="/assets/img/profil/logo_entp.svg.svg">
   <h2 style="margin-top:1%">L'innovateur</h2>
 </div>
 
 <div class="mainProfil" *ngIf="profilUser==='INFP'">
-  <img src="https://storage.googleapis.com/neris/public/images/types/avatars/infp-mediator.svg">
+  <img src="/assets/img/profil/logo_infp.svg">
   <h2 style="margin-top:1%">L’idéaliste</h2>
 </div>
 
 <div class="mainProfil" *ngIf="profilUser==='ENFP'">
-  <img src="https://storage.googleapis.com/neris/public/images/types/avatars/enfp-campaigner.svg">
+  <img src="/assets/img/profil/logo_enfp.svg">
   <h2 style="margin-top:1%">L'inspirateur</h2>
 </div>
 
 <div class="mainProfil" *ngIf="profilUser==='INFJ'">
-  <img src="https://storage.googleapis.com/neris/public/images/types/avatars/infj-advocate.svg">
+  <img src="/assets/img/profil/logo_infj.svg">
   <h2 style="margin-top:1%">L'avocat</h2>
 </div>
 
 <div class="mainProfil" *ngIf="profilUser==='ENFJ'">
-  <img src="https://storage.googleapis.com/neris/public/images/types/avatars/enfj-protagonist.svg">
+  <img src="/assets/img/profil/logo_enfj.svg">
   <h2 style="margin-top:1%">L’animateur</h2>
 </div>
 
 <div class="mainProfil" *ngIf="profilUser==='ISTP'">
-  <img src="https://storage.googleapis.com/neris/public/images/types/avatars/istp-virtuoso.svg">
+  <img src="/assets/img/profil/logo_istp.svg">
   <h2 style="margin-top:1%">Le virtuose</h2>
 </div>
 
 <div class="mainProfil" *ngIf="profilUser==='ISTJ'">
-  <img src="https://storage.googleapis.com/neris/public/images/types/avatars/istj-logistician.svg">
+  <img src="/assets/img/profil/logo_istj.svg">
   <h2 style="margin-top:1%">Le consciencieux</h2>
 
 </div>
 
 <div class="mainProfil" *ngIf="profilUser==='ESTP'">
-  <img src="https://storage.googleapis.com/neris/public/images/types/avatars/estp-entrepreneur.svg">
+  <img src="/assets/img/profil/logo_estp.svg">
   <h2 style="margin-top:1%">L’entrepreneur</h2>
 </div>
 
 <div class="mainProfil" *ngIf="profilUser==='ESTJ'">
-  <img src="https://storage.googleapis.com/neris/public/images/types/avatars/estj-executive.svg">
+  <img src="/assets/img/profil/logo_estj.svg">
   <h2 style="margin-top:1%">Le manager</h2>
 
 </div>
 
 <div class="mainProfil" *ngIf="profilUser==='ISFP'">
-  <img src="https://storage.googleapis.com/neris/public/images/types/avatars/isfp-adventurer.svg">
+  <img src="/assets/img/profil/logo_isfp.svg">
   <h2 style="margin-top:1%">L'aventurier</h2>
 </div>
 
 <div class="mainProfil" *ngIf="profilUser==='ISFJ'">
-  <img src="https://storage.googleapis.com/neris/public/images/types/avatars/isfj-defender.svg">
+  <img src="/assets/img/profil/logo_isfj.svg">
   <h2 style="margin-top:1%">Le protecteur</h2>
 </div>
 
 <div class="mainProfil" *ngIf="profilUser==='ESFP'">
-  <img src="https://storage.googleapis.com/neris/public/images/types/avatars/esfp-entertainer.svg">
+  <img src="/assets/img/profil/logo_esfp.svg">
   <h2 style="margin-top:1%">L’acteur</h2>
 </div>
 
 <div class="mainProfil" *ngIf="profilUser==='ESFJ'">
-  <img src="https://storage.googleapis.com/neris/public/images/types/avatars/esfj-consul.svg">
+  <img src="/assets/img/profil/logo_esfj.svg">
   <h2 style="margin-top:1%">Le bon vivant</h2>
 </div>
 
