--- a/src/app/file-drop-page/file-drop-page.component.scss
+++ b/src/app/file-drop-page/file-drop-page.component.scss
@@ -191,15 +191,15 @@ p {
     }
 
     .slide1 {
-      background-image: url(http://ptondereau.perso.centrale-marseille.fr/images/ownstat_car.png);
+      background-image: url("/assets/img/ownstat_car.png");
       animation: 20s slides-set-1 -0.1s infinite;
     }
     .slide2 {
-      background-image: url(http://ptondereau.perso.centrale-marseille.fr/images/conv_car.png);
+      background-image: url("/assets/img/conv_car.png");
       animation: 20s slides-set-2 -0.1s infinite;
     }
     .slide3 {
-      background-image: url(http://ptondereau.perso.centrale-marseille.fr/images/profil_car.png);
+      background-image: url("/assets/img/profil_car.png");
       animation: 20s slides-set-3 -0.1s infinite;
     }
 
@@ -254,17 +254,17 @@ p {
     }
 
     .slide1 {
-      background-image: linear-gradient(to bottom, rgba(200,200,75,0.25) 0, rgba(200,75,75,0.5) 100%), url(http://ptondereau.perso.centrale-marseille.fr/images/ownstat_car.png);
+      background-image: linear-gradient(to bottom, rgba(200,200,75,0.25) 0, rgba(200,75,75,0.5) 100%), url("/assets/img/ownstat_car.png");
       // background-image: url(../img/slideshow/hero-1.jpg);
       animation: 20s slides-set-1 -0.2s infinite;
     }
     .slide2 {
-      background-image: linear-gradient(to bottom, rgba(200,200,75,0.25) 0, rgba(200,75,75,0.5) 100%), url(http://ptondereau.perso.centrale-marseille.fr/images/conv_car.png);
+      background-image: linear-gradient(to bottom, rgba(200,200,75,0.25) 0, rgba(200,75,75,0.5) 100%), url("/assets/img/conv_car.png");
       // background-image: url(../img/slideshow/hero-2.jpg);
       animation: 20s slides-set-2 -0.2s infinite;
     }
     .slide3 {
-      background-image: linear-gradient(to bottom, rgba(200,200,75,0.25) 0, rgba(200,75,75,0.5) 100%), url(http://ptondereau.perso.centrale-marseille.fr/images/profil_car.png);
+      background-image: linear-gradient(to bottom, rgba(200,200,75,0.25) 0, rgba(200,75,75,0.5) 100%), url("/assets/img/profil_car.png");
       // background-image: url(../img/slideshow/hero-3.jpg);
       animation: 20s slides-set-3 -0.2s infinite;
     }
@@ -545,7 +545,6 @@ body {
 html,body {
   min-height:100%;
   height:100%;
-  background-image:url(http://theartmad.com/wp-content/uploads/Dark-Grey-Texture-Wallpaper-5.jpg);
   background-size:cover;
   background-position:top center;
   font-family:helvetica neue, helvetica, arial, sans-serif;
