--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
             <h1 class="launchText">Lancez Vous</h1>
           </span>
           <button style="padding: 0;" type="button" name="Hover" >
-            <h1 style="letter-spacing: 16px; font-style:italic;" class="launchText"><b style="font-weight:300; font-family: 'Roboto';">Sight</b><b style="font-weight:600; font-family: 'Roboto'">Mess</b></h1>
+            <h1 style="letter-spacing: 16px; font-style:italic;" class="launchText"><b style="font-weight:300; font-family: 'robotoReg';">Sight</b><b style="font-weight:600; font-family: 'robotoReg'">Mess</b></h1>
           </button>
         </div>
         <div class="TestBox">
