--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 p {
-  font-family:R 'Roboto', sans-serif;
+  font-family:'robotoReg', sans-serif;
 }
 
 
@@ -25,7 +25,7 @@ p {
   background-color:  #EEEEEE;
   color: rgb(51, 51, 51);
   min-height:97vh;
-  font-family:'Roboto', sans-serif;
+  font-family:'robotoReg', sans-serif;
   overflow: hidden;
 }
 
@@ -70,7 +70,6 @@ h1{
   margin-block-start: 0em;
   margin-block-end: 0em;
   font-size:1em;
-  
 }
 
 .rectLaunch:hover{
@@ -98,16 +97,17 @@ $col) {
   margin-right: auto;
   margin-left: auto;
   overflow: hidden;
-  border: 1px solid #fff;
   transition: 0.5s;
-  width: 390px;
+  width: 424px;
+  border-radius: 12px;
  
 
  button {
   font-weight: 300;
   font-size: 20px;
+  width: inherit;
 
-  @include button(#102A54,
+  @include button(white,
   "https://raw.githubusercontent.com/robin-dela/css-mask-animation/master/img/urban-sprite.png",
   3000%,
   100%,
