--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,14 @@
 @include igx-core();
 @include igx-theme($default-palette);
 
+@font-face {
+    font-family: 'robotoReg';
+    src: url('/assets/police/roboto/Roboto-Regular.ttf');
+}
+@font-face {
+    font-family: 'robotoLight';
+    src: url('/assets/police/roboto/Roboto-Light.ttf');
+}
 /* Add application styles & imports to this file! */
 body {
   margin-top:0px;
