Carrosel2 conv test1

--- a/src/app/file-drop-page/file-drop-page.component.html
+++ b/src/app/file-drop-page/file-drop-page.component.html
@@ -71,7 +71,7 @@
         </div>
     </div>
       <hr class="overview">
-      <p>Notre site vous permet d’analyser l’ensemble de vos messages pour en faire ressortir la personne que vous êtes vraiment.</p>
+      <p>Ce site vous permet d’analyser l’ensemble de vos messages pour en faire ressortir la personne que vous êtes vraiment.</p>
       <p style="padding-bottom:1%">Vous pourrez explorer des statistiques liées à vos conversations, voir les chiffres clés qui vous caractérisent ou encore en apprendre plus sur vous-même à travers l’élaboration de votre profil Messenger.</p>
     </div>
     <div class="listIcone">
