--- a/src/app/file-drop-page/file-drop-page.component.scss
+++ b/src/app/file-drop-page/file-drop-page.component.scss
@@ -191,15 +191,15 @@ p {
     }
 
     .slide1 {
-      background-image: url("/assets/img/ownstat_car.png");
+      background-image: url("/assets/img/carroselConv.jpg");
       animation: 20s slides-set-1 -0.1s infinite;
     }
     .slide2 {
-      background-image: url("/assets/img/conv_car.png");
+      background-image: url("/assets/img/carroselConv2.jpg");
       animation: 20s slides-set-2 -0.1s infinite;
     }
     .slide3 {
-      background-image: url("/assets/img/profil_car.png");
+      background-image: url("/assets/img/carroselConv3.jpg");
       animation: 20s slides-set-3 -0.1s infinite;
     }
 
@@ -244,7 +244,7 @@ p {
 
       .slides {
         width: 100vw;
-        left: auto;
+        left: 20%;
         right: 0;
       }
     }
@@ -254,17 +254,17 @@ p {
     }
 
     .slide1 {
-      background-image: linear-gradient(to bottom, rgba(200,200,75,0.25) 0, rgba(200,75,75,0.5) 100%), url("/assets/img/ownstat_car.png");
+      background-image: linear-gradient(to bottom, rgba(200,200,75,0.25) 0, rgba(200,75,75,0.5) 100%), url("/assets/img/carroselConv.jpg");
       // background-image: url(../img/slideshow/hero-1.jpg);
       animation: 20s slides-set-1 -0.2s infinite;
     }
     .slide2 {
-      background-image: linear-gradient(to bottom, rgba(200,200,75,0.25) 0, rgba(200,75,75,0.5) 100%), url("/assets/img/conv_car.png");
+      background-image: linear-gradient(to bottom, rgba(200,200,75,0.25) 0, rgba(200,75,75,0.5) 100%), url("/assets/img/carroselConv2.jpg");
       // background-image: url(../img/slideshow/hero-2.jpg);
       animation: 20s slides-set-2 -0.2s infinite;
     }
     .slide3 {
-      background-image: linear-gradient(to bottom, rgba(200,200,75,0.25) 0, rgba(200,75,75,0.5) 100%), url("/assets/img/profil_car.png");
+      background-image: linear-gradient(to bottom, rgba(200,200,75,0.25) 0, rgba(200,75,75,0.5) 100%), url("/assets/img/carroselConv3.jpg");
       // background-image: url(../img/slideshow/hero-3.jpg);
       animation: 20s slides-set-3 -0.2s infinite;
     }
