--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
             <h1 style="letter-spacing: 16px; font-style:italic;" class="launchText"><b style="font-weight:300; font-family: 'robotoReg';">Sight</b><b style="font-weight:600; font-family: 'robotoReg'">Mess</b></h1>
           </button>
         </div>
-        <div class="TestBox">
+        <!--<div class="TestBox">
           <p style="margin-left: 1%; text-align:left; font-size: 30px; margin-top:0; color:white; ">Ils ont testé :</p>
         </div>
         <ul id="c"> 
@@ -33,7 +33,83 @@
             <li><img src="/assets/img/pdp_hugo.jpg"/><div class="textAvis"><p class="nameAvis">Hugo Pillet</p><p class="avis">Salut, comment on fait pour avoir son dossier facebook ?</p><p class="dateAvis">20/06/2019</p></div></li>
             
         
-          </ul>
+          </ul>-->
+          <div class="container">
+            <div class="card" style="left: 90px;top: 80px;">
+               <div class="card__image-container">
+                 <img class="card__image" src="https://scontent.fcdg1-1.fna.fbcdn.net/v/t1.0-9/57280430_1236081799880880_7684476875216781312_n.jpg?_nc_cat=111&_nc_ht=scontent.fcdg1-1.fna&oh=128b9435a44c648a9287f5f8a428840d&oe=5D93F887" alt="">
+              </div>
+                
+                <svg class="card__svg" viewBox="0 0 800 500">
+          
+                  <path d="M 0 100 Q 50 200 100 250 Q 250 400 350 300 C 400 250 550 150 650 300 Q 750 450 800 400 L 800 500 L 0 500" stroke="transparent" fill="#333"/>
+                  <path class="card__line" d="M 0 100 Q 50 200 100 250 Q 250 400 350 300 C 400 250 550 150 650 300 Q 750 450 800 400" stroke="pink" stroke-width="3" fill="transparent"/>
+                </svg>
+              
+               <div class="card__content">
+                 <h1 class="card__title">Paul Tondereau</h1>
+               <p>J'ai lancé le site sans internet, parce que ma maman a débranché la box, et vraiment c'était cool</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="container">
+            <div class="card" style="left: 243px;bottom: 80px;">
+               <div class="card__image-container">
+                 <img class="card__image" src="https://scontent.fcdg1-1.fna.fbcdn.net/v/t1.0-9/20882649_1784857021554479_1603747138314449400_n.jpg?_nc_cat=103&_nc_ht=scontent.fcdg1-1.fna&oh=b533d1c1089ce0f9f3435f23098320f3&oe=5D5205E9" alt="">
+              </div>
+                
+                <svg class="card__svg" viewBox="0 0 800 500">
+          
+                  <path d="M 0 100 Q 50 200 100 250 Q 250 400 350 300 C 400 250 550 150 650 300 Q 750 450 800 400 L 800 500 L 0 500" stroke="transparent" fill="#333"/>
+                  <path class="card__line" d="M 0 100 Q 50 200 100 250 Q 250 400 350 300 C 400 250 550 150 650 300 Q 750 450 800 400" stroke="pink" stroke-width="3" fill="transparent"/>
+                </svg>
+              
+               <div class="card__content">
+                 <h1 class="card__title">Valentin Bonnier</h1>
+               <p>Ce site est une pure idée de génie ! J'ai découvert tellement de choses !</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="container">
+            <div class="card" style="right: 214px;bottom: 60px;">
+               <div class="card__image-container">
+                 <img class="card__image" src="https://scontent.fcdg1-1.fna.fbcdn.net/v/t1.0-9/52136234_10215750779036726_81663979885166592_n.jpg?_nc_cat=103&_nc_ht=scontent.fcdg1-1.fna&oh=b1f7b63f1d53181a243640a5976f7d52&oe=5D550B34" alt="">
+              </div>
+                
+                <svg class="card__svg" viewBox="0 0 800 500">
+          
+                  <path d="M 0 100 Q 50 200 100 250 Q 250 400 350 300 C 400 250 550 150 650 300 Q 750 450 800 400 L 800 500 L 0 500" stroke="transparent" fill="#333"/>
+                  <path class="card__line" d="M 0 100 Q 50 200 100 250 Q 250 400 350 300 C 400 250 550 150 650 300 Q 750 450 800 400" stroke="pink" stroke-width="3" fill="transparent"/>
+                </svg>
+              
+               <div class="card__content">
+                 <h1 class="card__title">Hugo Pillet</h1>
+               <p>A la base j'étais juste curieux, maintenant c'est devenu un must ! Merci !</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="container">
+            <div class="card" style="right: 110px;top: 80px;">
+               <div class="card__image-container">
+                 <img class="card__image" src="https://scontent.fcdg1-1.fna.fbcdn.net/v/t1.0-9/40771171_2075305682785082_779381438595203072_n.jpg?_nc_cat=101&_nc_ht=scontent.fcdg1-1.fna&oh=a3fb45a5ff50d91da69a00565c3e9dbd&oe=5D93DF53" alt="">
+              </div>
+                
+                <svg class="card__svg" viewBox="0 0 800 500">
+          
+                  <path d="M 0 100 Q 50 200 100 250 Q 250 400 350 300 C 400 250 550 150 650 300 Q 750 450 800 400 L 800 500 L 0 500" stroke="transparent" fill="#333"/>
+                  <path class="card__line" d="M 0 100 Q 50 200 100 250 Q 250 400 350 300 C 400 250 550 150 650 300 Q 750 450 800 400" stroke="pink" stroke-width="3" fill="transparent"/>
+                </svg>
+              
+               <div class="card__content">
+                 <h1 class="card__title">Audrey Tordjmann</h1>
+               <p>Quel ne fût pas ma stupéfaction devant mon profil...</p>
+              </div>
+            </div>
+          </div>
+
       </div>
     </div>
 
