--- a/src/styles.scss
+++ b/src/styles.scss
@@ -135,3 +135,7 @@ $green-palette: igx-palette($primary: #09f,$secondary: #72da67, $surface: #333);
     background: #1A1837;
     border-radius: 10px;
 }
+
+p, h1, h2 {
+    font-family: "robotoLight";
+}
