--- a/src/app/home-pannel-page/convs-pannel/one-conv-stats/autres-stat/autres-stat.component.html
+++ b/src/app/home-pannel-page/convs-pannel/one-conv-stats/autres-stat/autres-stat.component.html
@@ -9,7 +9,7 @@
         <div class="helpText" id="helpQuestion">
           <p>Vous voulez de l'aide pour lire ?</p>       
         </div>
-        <div id="graphQuestion" style="height:75%; padding-top:0.5%;">
+        <div id="graphQuestion" style="height:75%; padding-top:0.5%; font-size: 0.9em;">
         <img style="height:20%;" src="/assets/img/logo_ask.svg"/>
         <p> {{nbreQuestionToPrintSum}} </p>
         <p> {{nbreQuestionToPrintAverage}} </p>
@@ -20,7 +20,7 @@
       </div>  
     </div>
 
-    <div class="oneCard cardtopright">
+    <div class="oneCard cardtopright" style="font-size: 0.9em;">
       <div class="sideText">
         <h2>Nombre de caractères</h2>
         <img class = "imgHelp" style="margin-top:0.55%" (click)="help('Book')" src="/assets/img/logo_info.svg"/>
@@ -95,12 +95,12 @@
       </div>
       <div class="sideImg">
         <div class="helpText" id="helpTimeHelp">
-          <p>Ce sont les temps qu'une personne moyenne mettrait à :</p>
+          <p style="margin-bottom: 0;">Ce sont les temps qu'une personne moyenne mettrait à :</p>
           <p style="margin-top:1%; font-size:55%;margin-top:0;margin-bottom:0;">- Lire la conversation à voix haute sans s'arrêter</p>
           <p style="font-size:55%;margin-top:0;margin-bottom:0;">- Écrire la conversation sur ordinateur sans s'arrêter</p>
           <p style="font-size:55%;margin-top:0;margin-bottom:0;">- Écrire la conversation à la main sans s'arrêter</p>     
         </div>
-        <div id="graphTimeHelp" style="height:75%; padding-top:0.5%;">
+        <div id="graphTimeHelp" style="height:75%; padding-top:0.5%;font-size: 0.9em;">
         <div class="explication">
         <div class="infoTime">
           <img src="/assets/img/logo_reading.svg"/>
