--- a/src/app/file-drop-page/file-drop-page.component.scss
+++ b/src/app/file-drop-page/file-drop-page.component.scss
@@ -156,7 +156,7 @@ p {
 
 .wrapper {
   position: relative;
-  height: 71vh;
+  height: 700px;
   width: 101vw;
   margin-left: -1vw;
   overflow: hidden;
